--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_1_intro.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_1_intro.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Variables et fonctions 1/5 - Introduction"
+    "# Introduction"
    ]
   },
   {
@@ -155,9 +155,7 @@
     }
    },
    "source": [
-    "## Comment est traduit mon code en langage machine ?\n",
-    "\n",
-    "** Qu'en est-il pour mon code Python ? **\n",
+    "## Comment est traduit mon code Python en langage machine ?\n",
     "\n",
     "<img src=\"img/TraductionPython.png\" />\n",
     "\n",
@@ -294,17 +292,13 @@
    "source": [
     "## Mes premières variables\n",
     "\n",
-    " * Noms de variables\n",
-    "   * lettres, chiffres et \"_\" .\n",
-    "   * interdit d'utiliser les mot-clés (ou mots réservés).\n",
-    "   * dangereux de redéfinir les built-in.\n",
-    " * `__*__` : par convention, noms définis par le système.\n",
-    " * Affectation par \"=\"\n",
-    " * Comparaison par \"==\"\n",
-    " * On peut voir le contenu d'une variable…\n",
-    "   * en donnant son nom à l'interpréteur python ;\n",
-    "   * ou en utilisant la fonction print().\n",
-    " * Affectations multiples"
+    "Les noms de variables sont faits de **lettres**, de **chiffres**, et de soulignés **_**. Par convention, les variables automatiquement définies par le système ont un nom qui commence et se termine par un double souligné  **__**. Python fait la différence entre minuscules et majuscules dans les noms de variables.   Depuis Python 3, les caractères non-ascii sont autorisés dans les noms de variables, puisqu'il travaille en unicode… mais à éviter pour le moment !!\n",
+    "\n",
+    "Il est bien sur interdit d'utiliser les mot-clés (ou mots réservés), et très dangereux de redéfinir les types et fonctions prédéfinies.\n",
+    "\n",
+    "L'affectation d'une valeur à une variable se fait à l'aide de l'opérateur égal **=**. La comparaison de deux valeurs se fait à l'aide du double-égal **==**.\n",
+    "\n",
+    "On peut voir le contenu d'une variable en donnant son nom à l'interpréteur python, ou par un appel à la fonction `print()`. Dans un fichier, la seule façon de faire afficher la valeur d'une variable est un appel à `print()`."
    ]
   },
   {
@@ -351,6 +345,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python permet de faire des affectations multiples, en fournissant une collection de variables à gauche et une collection de valeurs à droite."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -388,45 +389,6 @@
    "source": [
     "x, y = y, x\n",
     "print(x,y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python fait la différence entre minuscules et majuscules dans les noms de variables.  \n",
-    "Depuis Python 3, les caractères non-ascii sont autorisés dans les noms de variables, puisqu'il travaille en unicode… mais à éviter pour le moment !!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Here is a list of the Python keywords.  Enter any keyword to get more help.\n",
-      "\n",
-      "False               def                 if                  raise\n",
-      "None                del                 import              return\n",
-      "True                elif                in                  try\n",
-      "and                 else                is                  while\n",
-      "as                  except              lambda              with\n",
-      "assert              finally             nonlocal            yield\n",
-      "break               for                 not                 \n",
-      "class               from                or                  \n",
-      "continue            global              pass                \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(\"keywords\")"
    ]
   },
   {
