--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_entrees_sorties.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_entrees_sorties.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Variables et fonctions 5/5 - Compléments"
+    "# Entrées/sorties"
    ]
   },
   {
@@ -106,29 +106,6 @@
    ],
    "source": [
     "'{cadre} {texte} ! {cadre}'.format(texte='Hello world',cadre='===')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arguments = { 'texte': 'Hello world', 'cadre': '===' }\n",
-    "'{cadre} {texte} ! {cadre}'.format(**arguments)"
    ]
   },
   {
@@ -241,522 +218,7 @@
     }
    },
    "source": [
-    "## Récursivité\n",
-    "\n",
-    "Une fonction peut s'appeler elle-même, directement ou indirectement."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def fact(n):\n",
-    "    if n <= 1:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return n * fact(n - 1)\n",
-    "\n",
-    "fact(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Pensez à placer une condition d'arrêt."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Erreur: \"maximum recursion depth exceeded\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "def inf(n):\n",
-    "    return inf(n + 1)\n",
-    "\n",
-    "try:\n",
-    "    inf(0)\n",
-    "except RuntimeError as e:\n",
-    "    print('Erreur: \"{0}\"'.format(e))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compréhensions de liste"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 4, 16, 36, 64, 100, 144, 196, 256, 324, 400, 484, 576, 676, 784, 900, 1024, 1156, 1296, 1444, 1600, 1764, 1936, 2116, 2304, 2500, 2704, 2916, 3136, 3364, 3600, 3844, 4096, 4356, 4624, 4900, 5184, 5476, 5776, 6084, 6400, 6724, 7056, 7396, 7744, 8100, 8464, 8836, 9216, 9604]\n"
-     ]
-    }
-   ],
-   "source": [
-    "l = [ i**2 for i in range(100) if i%2==0 ]\n",
-    "print(l)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Une fonction est une valeur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
-    }
-   ],
-   "source": [
-    "def fa(a):\n",
-    "    return a ** 2\n",
-    "\n",
-    "maVar = fa\n",
-    "print (maVar(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "def jAccepteUneFonction(f, v):\n",
-    "    return f(v)\n",
-    "\n",
-    "print(jAccepteUneFonction(maVar, 6))\n",
-    "print(jAccepteUneFonction(int, 6.48074069841))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Autre définition de fonctions : les *lambdas*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42\n"
-     ]
-    }
-   ],
-   "source": [
-    "maVar4 = lambda a : a * 2\n",
-    "print(maVar4(21))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Les prédicats\n",
-    "\n",
-    "Un prédicat est une fonction qui retourne \"Vrai\" ou \"Faux\" en fonction de critères qui lui sont propres.\n",
-    "Idéalement, la valeur \"Vrai\" ou \"Faux\" du prédicat ne doit dépendre que des arguments de celui-ci."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Prédicat qui nous dit si la valeur de l'entier a est plus grande que 10\n",
-    "def auDessusDe10(a):\n",
-    "    return a >= 10\n",
-    "\n",
-    "print(auDessusDe10(5),auDessusDe10(11))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Utilisation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<filter object at 0x1041b8320>\n",
-      "[1764, 49, 25, 25, 64]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Prédicat qui nous dit si la valeur de l'entier a est plus grande que 10\n",
-    "def auDessusDe10(a):\n",
-    "    return a >= 10\n",
-    "\n",
-    "monTableau = [ 1764, 49, 25, 9, 0, -16, 25, -9, 4, 64 ]\n",
-    "f = filter(auDessusDe10, monTableau)\n",
-    "print(f)\n",
-    "print(list(f))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Prédicats anonymes: les lambdas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<filter object at 0x1041b8dd8>\n",
-      "[-16, -9]\n"
-     ]
-    }
-   ],
-   "source": [
-    "monTableau = [ 1764, 49, 25, 9, 0, -16, 25, -9, 4, 64 ]\n",
-    "f=filter(lambda a : a < 0, monTableau)\n",
-    "print(f)\n",
-    "print(list(f))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Syntaxe:\n",
-    "**lambda** arg0 [, arg1, [arg2, ...]] : _code_\n",
-    "\n",
-    "La dernière _expression_ de la section **_code_** de lambda correspond à la valeur retournée."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-16, -9]\n",
-      "[-16, -9]\n"
-     ]
-    }
-   ],
-   "source": [
-    "f = filter(lambda a : a < 0, monTableau)\n",
-    "# est équivalent à\n",
-    "def anon0(a):\n",
-    "    return a < 0\n",
-    "f2 = filter(anon0, monTableau)\n",
-    "\n",
-    "print(list(f))\n",
-    "print(list(f2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Le traitement de données par fonctions\n",
-    "\n",
-    "Il existe _3_ traitements standards sur les données de type \"**sequences**\" en python :\n",
-    "- filter : qui, comme nous l'avons vu, permet de _filtrer_ nos données selon un critère exprimé par un prédicat :\n",
-    "    - len(data) >= len(filter(predicat, data))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "- map : qui applique un traitement à chaque élément :\n",
-    "    - len(data) == len(map(lambda, data))\n",
-    "- functools.reduce : qui fusionne les éléments grâce à un opérateur :\n",
-    "    - 1 == len(functools.reduce(lambda, data))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[42, 7, 5, 3, 0, nan, 5, nan, 2, 8]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "monTableau = [ 1764, 49, 25, 9, 0, -16, 25, -9, 4, 64 ]\n",
-    "m = map(lambda a : (float('nan') if (a < 0) else int(math.sqrt(a))), monTableau)\n",
-    "print(list(m))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## reduce"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1847\n"
-     ]
-    }
-   ],
-   "source": [
-    "import functools\n",
-    "monTableau = [ 1764, 49, 25, 9 ]\n",
-    "r=functools.reduce(lambda a, b : a + b, monTableau)\n",
-    "print(r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " - 1764 + 49\n",
-      " - 1813 + 25\n",
-      " - 1838 + 9\n",
-      "1847\n"
-     ]
-    }
-   ],
-   "source": [
-    "import functools\n",
-    "\n",
-    "def add(a, b):\n",
-    "    print(\" - {} + {}\".format(a, b))\n",
-    "    return a + b\n",
-    "\n",
-    "print(functools.reduce(add, monTableau))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "<center>\n",
-    "![Illustration reduce](./img/fonctions_reduce.png \"Illustration reduce\")\n",
-    "</center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Les fichiers"
+    "## Fichiers textuels"
    ]
   },
   {
@@ -825,7 +287,7 @@
     }
    },
    "source": [
-    "## Format binaire\n",
+    "## Fichiers binaires\n",
     "\n",
     "Les données lues et écrites sont en format texte, il est également possible de lire et écrire des données en format binaire via le module _pickle_"
    ]
@@ -876,11 +338,9 @@
     }
    },
    "source": [
-    "## Gestionnaire de contextes : *with*\n",
+    "## Exceptions et contextes\n",
     "\n",
-    "Les gestionnaires de contexte en python permettent de s'assurer que des instructions sont toujours exécutées au début et à la fin de l'exécution d'un code, même si une exception est levée pendant l'exécution de ce code.\n",
-    "\n",
-    "La fonction `open` renvoie un objet de type fichier qui est un gestionnaire de contexte, qui va permettre de s'assurer de la fermeture du fichier.\n"
+    "En cas de problème lors de la manipulation d'un fichier, Python est susceptible d'émettre une exception, qui va interrompre les instructions en cours, et oublier la fermeture du fichier. Il est important de surveiller ces exceptions et de s'assurer de la fermeture du fichier.\n"
    ]
   },
   {
@@ -915,8 +375,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Pour alléger ce travail, les auteurs de Python ont introduit la notion de **gestionnaires de contexte**. Un tel gestionnaire, utilisé à la suite d'une instruction **with**, garantit que certaines instructions sont toujours exécutées au début et à la fin de l'exécution du bloc de codede `with`, même si une exception est levée pendant l'exécution de ce bloc.\n",
+    "\n",
+    "La fonction `open` renvoie maintenant un objet qui est aussi un gestionnaire de contexte (en plus d'être un fichier), et garantit la fermeture du fichier en présence d'exception."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -925,7 +398,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte\n"
+      "[Errno 2] No such file or directory: 'donnees_test'\n"
      ]
     }
    ],
