--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_5_complements.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_5_complements.ipynb
@@ -11,309 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Variables et fonctions 5/5 - Compléments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Formattage des affichages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La méthode `str.format()` permet de construire une chaîne de caractères complexe à partir d'une chaîne qui décrit le format et d'une collection de valeurs données en arguments. La chaîne de format doit comprendre des accolades `{}` aux emplacements ou l'on veut substituer les valeurs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'{} {} ! {}'.format('===','Hello world','===')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "On peut utiliser des numéros si on veut répéter ou inverser l'ordre de certaines valeurs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'{0} {1} ! {0}'.format('===','Hello world')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "On peut aussi utiliser des noms si les arguments sont nommés."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'{cadre} {texte} ! {cadre}'.format(texte='Hello world',cadre='===')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arguments = { 'texte': 'Hello world', 'cadre': '===' }\n",
-    "'{cadre} {texte} ! {cadre}'.format(**arguments)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pour donner des instructions plus précises sur la façon de formatter une valeur précise, on peut ajouter un double-point `:` suivi d'un ensemble de caractères à la façon de la fonction `printf()` du langage C."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Entiers : -002 10 F'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"Entiers : {:04d} {:o} {:X}\".format(-2,8,15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Flottants :  6.000000E-06 +4.500 6.000000E-06'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"Flottants :  {1:-E} {0:+2.3f} {1:-E}\".format(4.5,0.000006)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Avec noms : texte 10 texte'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"Avec noms : {ch:s} {val:d} {ch:s}\".format(ch='texte',val=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Il est encore courant de rencontrer la méthode de formattage historique de Python, qui reposait sur l'opérateur `%`. Bien que plus pratique en apparence, l'usage de cet opérateur est maintenant déconseillé."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'pi = 3.14 '"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"pi = %1.2f \" % 3.14159"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Récursivité\n",
-    "\n",
-    "Une fonction peut s'appeler elle-même, directement ou indirectement."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def fact(n):\n",
-    "    if n <= 1:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return n * fact(n - 1)\n",
-    "\n",
-    "fact(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Pensez à placer une condition d'arrêt."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Erreur: \"maximum recursion depth exceeded\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "def inf(n):\n",
-    "    return inf(n + 1)\n",
-    "\n",
-    "try:\n",
-    "    inf(0)\n",
-    "except RuntimeError as e:\n",
-    "    print('Erreur: \"{0}\"'.format(e))"
+    "# Compléments"
    ]
   },
   {
@@ -746,196 +444,6 @@
     "<center>\n",
     "![Illustration reduce](./img/fonctions_reduce.png \"Illustration reduce\")\n",
     "</center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Les fichiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fout = open('Monfichier','w')\n",
-    "fout.write('Ceci est un fichier\\n')\n",
-    "fout.close()\n",
-    "fout = open('Monfichier','a')\n",
-    "fout.write(\"avec du contenu ...!\")\n",
-    "fout.write(str(1))\n",
-    "fout.write(\"\\n et encore d'autres informations\\n\")\n",
-    "for i in [\"inutiles\", \" au possible\"]:\n",
-    "    fout.write(i)\n",
-    "fout.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ceci est la premiere ligne du fichier : <Ceci est un fichier\n",
-      ">\n",
-      "ceci sont les 5 caractères suivants : <avec >\n",
-      "ceci est le reste du fichier : <\n",
-      "['du contenu ...!1\\n', \" et encore d'autres informations\\n\", 'inutiles au possible']\n",
-      ">\n"
-     ]
-    }
-   ],
-   "source": [
-    "fin = open(\"Monfichier\", 'r')\n",
-    "ligne = fin.readline()\n",
-    "print(\"ceci est la premiere ligne du fichier : <\" + ligne + \">\")\n",
-    "chaine = fin.read(5)\n",
-    "print(\"ceci sont les 5 caractères suivants : <\" + chaine + \">\")\n",
-    "reste = fin.readlines()\n",
-    "print(\"ceci est le reste du fichier : <\")\n",
-    "print(reste)\n",
-    "print(\">\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Format binaire\n",
-    "\n",
-    "Les données lues et écrites sont en format texte, il est également possible de lire et écrire des données en format binaire via le module _pickle_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27 <class 'int'>\n",
-      "12.96 <class 'float'>\n",
-      "[5, 4.83, 'Mathieu'] <class 'list'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pickle\n",
-    "a, b, c = 27, 12.96, [5, 4.83, \"Mathieu\"]\n",
-    "f = open('donnees_test', 'wb')\n",
-    "pickle.dump(a, f)\n",
-    "pickle.dump(b, f)\n",
-    "pickle.dump(c, f)\n",
-    "f.close()\n",
-    "f = open('donnees_test', 'rb')\n",
-    "j = pickle.load(f)\n",
-    "k = pickle.load(f)\n",
-    "l = pickle.load(f)\n",
-    "print(j, type(j))\n",
-    "print(k, type(k))\n",
-    "print(l, type(l))\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Gestionnaire de contextes : *with*\n",
-    "\n",
-    "Les gestionnaires de contexte en python permettent de s'assurer que des instructions sont toujours exécutées au début et à la fin de l'exécution d'un code, même si une exception est levée pendant l'exécution de ce code.\n",
-    "\n",
-    "La fonction `open` renvoie un objet de type fichier qui est un gestionnaire de contexte, qui va permettre de s'assurer de la fermeture du fichier.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte\n"
-     ]
-    }
-   ],
-   "source": [
-    "fh = None\n",
-    "try:\n",
-    "    fh = open(\"donnees_test\")\n",
-    "    for line in fh:\n",
-    "        process(line)\n",
-    "except BaseException as err:\n",
-    "    print(err)\n",
-    "finally:\n",
-    "    if fh is not None:\n",
-    "        fh.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    with open(\"donnees_test\") as fh:\n",
-    "        for line in fh:\n",
-    "            process(line)\n",
-    "except BaseException as err:\n",
-    "    print(err)"
    ]
   },
   {
